chore(error response): update error response on order handlers
